@@ -5,8 +5,10 @@ postgresql-common (165+deb8u2) jessie; urgency=medium
   * pg_ctlcluster, t/020_create_sql_remove.t: Protect against symlink in
     /var/log/postgresql/ allowing the creation of arbitrary files elsewhere.
     Discovered by Dawid Golunski, thanks! (CVE-2016-1255)
+  * t/TestLib.pm: Cherry-pick program_ok() from master for use in
+    t/020_create_sql_remove.t.
 
- -- Christoph Berg <christoph.berg@credativ.de>  Thu, 13 Oct 2016 15:32:49 +0200
+ -- Christoph Berg <myon@debian.org>  Sun, 01 Jan 2017 18:48:30 +0100
 
 postgresql-common (165+deb8u1) jessie; urgency=medium
 
